Changes in Domain.yml, actions.py, nlu.md and stories.md. Also adding Voice_bot.py

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,8 @@
+---
 language: en
 pipeline: supervised_embeddings
 policies:
-- name: MemoizationPolicy
-- name: KerasPolicy
-- name: MappingPolicy
+  - name: MemoizationPolicy
+  - name: KerasPolicy
+  - name: MappingPolicy
+  - name: FormPolicy
